everything is working

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 </div>
 
-    <div class="table-container" id="table-container" style="display: none;">
+    <div class="table-container" id="table-container" style="display:none">
         <h2>Participant Records</h2>
         <!-- Table populated dynamically-->
     </div>
