--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             <span class="close">&times;</span>
             <h2>Edit Participant</h2>
             <form id="edit-participant-form">
+                <!-- Hidden input for storing the ID of the participant being edited -->
+                <input type="hidden" id="edit-participant-id" name="edit-participant-id">
                 <!-- Form fields for editing participant -->
                 <label for="edit-first-name">First Name:</label>
                 <input type="text" id="edit-first-name" name="edit-first-name" required>
