forms and buttons working

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
 <body>
 
+    <div class="logo-title-flex-container">
+        <img src="HNGLogo.jpeg" alt="Logo image" class="logo-image">
+        <h1 class="group-title">The Hispanic Networking Group In The Ozarks</h1>
+    </div>
+    
+
     <div class="login-container" id="login-container">
         <h2>Admin Login</h2>
         <form id="login-form">
@@ -34,7 +40,7 @@
     </div>
 
     <div class="table-container" id="table-container" style="display:none">
-        <h2>Participant Records</h2>
+        <h2 class="participant-records">Participant Records</h2>
         <!-- Table populated dynamically-->
     </div>
 
