--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="logo-title-flex-container">
-        <img src="HNGLogo.jpeg" alt="Logo image" class="logo-image">
+        <img src="logo2.jpeg" alt="Logo image" class="logo-image">
         <h1 class="group-title">The Hispanic Networking Group In The Ozarks</h1>
     </div>
     
