--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <!-- Requests that page does not search for favicon-->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Briem+Hand:wght@100..900&display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -19,7 +24,7 @@
         <img src="logo2.jpeg" alt="Logo image" class="logo-image">
         <h1 class="group-title">The Hispanic Networking Group In The Ozarks</h1>
     </div>
-    
+
 
     <div class="login-container" id="login-container">
         <h2>Admin Login</h2>
