--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Briem+Hand:wght@100..900&display=swap" rel="stylesheet">
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Briem+Hand:wght@100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -53,7 +58,7 @@
     <div id="edit-modal" class="modal" style="display:none;">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>Edit Participant</h2>
+            <h2 class="edit-participant-title">Edit Participant</h2>
             <form id="edit-participant-form">
                 <!-- Hidden input for storing the ID of the participant being edited -->
                 <input type="hidden" id="edit-participant-id" name="edit-participant-id">
